feat: extends - block - variables <Pug>

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,4 @@
-doctype html 
-html(lang='ko')
-  head
-    title Vtube
-  body
-    h1 Welcome to Vtube 
-  include partials/footer.pug
+extends base.pug
+
+block content
+  h1 Home! I love #{tomato}
