--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,8 +1,15 @@
 doctype html 
-html(lang='ko')
+html(lang="ko")
   head
     title #{pageTitle} | Vtube
+    link(rel="stylesheet" href="https://unpkg.com/mvp.css")
   body
-    block content
-    h3 let's go
+    header
+      h1=pageTitle
+      nav 
+        ul 
+          li 
+            a(href="/videos/upload") Upload Video
+    main
+      block content
   include partials/footer.pug
