--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,9 @@
 extends base.pug
+include mixins/video.pug
 
 block content
-  h1 Home! I love #{tomato}
+  h2 Welcome here you will see the trending videos
+  each video in videos
+    +video(video)
+  else 
+    li Sorry Nothing Found.
