--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -3,7 +3,11 @@ include ../mixins/video.pug
 
 
 block content
+  div.profile__data
+    img(src="/" + user.avatarUrl).avatar
+    h3=user.name
+  div.video-grid
     each video in user.videos
-        +video(video)
+      +video(video)
     else
-        li Sorry nothing found.
+      span.empty__message No videos found
