--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,6 +3,8 @@ extends base.pug
 block content 
   if errorMessage 
     span=errorMessage
+  div
+    button#startBtn Start Recording
   form(method="POST", enctype="multipart/form-data")
     label(for="video") Video File
     input(type="file", accept="video/*", required, id="video", name="video")
@@ -10,3 +12,6 @@ block content
     input(placeholder="Description", required, type="text", name="description", minLength=20)
     input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
     input(type="submit", value="Upload Video")
+    
+block scripts 
+  script(src="/static/js/recorder.js")
