feat: download recorded video

--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -4,6 +4,7 @@ block content
   if errorMessage 
     span=errorMessage
   div
+    video#preview
     button#startBtn Start Recording
   form(method="POST", enctype="multipart/form-data")
     label(for="video") Video File
